--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body{
     display: flex;
     flex-direction: column;
     flex:1;
+    margin: 0%;
 }
 .headcontainer{
     display: flex;
@@ -44,8 +45,10 @@ body{
 }
 img{
     width: 100%;
+    height: 100%;
+   
 
-height: 100%;
+
 }
 
 .headtext{
@@ -53,11 +56,13 @@ height: 100%;
 }
 .maintext{
     
-    font: 48px extra-bold;
+    font-size: 48px;
+    font-weight: bolder;
 }
 .headimg{
    
     width: 600px;
+    height: 197px;
 
 }
 button{
@@ -67,4 +72,34 @@ button{
     padding: 4px 16px;
     color:#e5e7eb;
     border-radius: 2px;
+}
+.infohead{
+    display: flex;
+    justify-content: center;
+    margin: 20px;
+    font-size: 36px;
+    font-weight: bolder;
+
+    color: #1f2937;
+}
+.info{
+    margin-bottom:60px;
+}
+.infoimg{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 35px;
+    
+}
+
+.png{
+    height:145px;
+    width:145px;
+    text-align: center;
+}
+
+
+.infoimg img{
+    border-radius: 8px;
 }
