--- a/style.css
+++ b/style.css
@@ -103,3 +103,26 @@ button{
 .infoimg img{
     border-radius: 8px;
 }
+.conntainer{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-size: 36px;
+    font-weight: lighter;
+  
+    font-style: italic;
+    width: fit-content;
+}
+.thor{
+    align-self: flex-end;
+    font-weight: bold;
+    font-size: 24px;
+    font-style: normal;
+}
+.con{
+    display: flex;
+    padding: 60px;
+    justify-content: center;
+    background-color: #e5e7eb;
+}
